--- a/flexable.css
+++ b/flexable.css
@@ -3,8 +3,8 @@
  *
  * ultra basic flexbox helper
  *
- * author: Alexandre Bintz <alexandre@bintz.io>
- * 11.2015
+ * The MIT License (MIT)
+ * Copyright (c) 2015 Alexandre Bintz <alexandre@bintz.io>
  */
 
 /*
